adição e retorno de informaçoes no banco de dados
